--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ footer {
     margin-left: 15%;
     float: left;
     text-align: center;
-    font-size: 35px;
+    font-size: 30px;
     margin-top: 5%;
 
 }
@@ -60,24 +60,30 @@ footer {
     margin-right: 12%;
     float: right;
     text-align: center;
-    font-size: 35px;
+    font-size: 30px;
     margin-top: 5%;
 
 }
 
-.computer-gamer > i {
+.computer-gamer > button {
     text-align: center;
     display: block;
-    padding-top: 3%;
+    width: 100%;
+    font-size: 40px;
+    cursor: not-allowed;
 
 }
 
-.result-gamer2 {
-    padding-top: 13%;
+.computer-gamer > button:hover {
+    background-color: grey;
+
+
 }
 
-.results-total {
+
+.results-total > div {
     text-align: center;
     padding-top: 18%;
-    font-size: 30px;
+    font-size: 35px;
+    
 }
