--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,13 +23,14 @@ footer {
     right: 0;
     bottom: 0;
     box-sizing: border-box;
-    min-height: 40px;
     padding-top: 5px;
     text-align: center;
     color:white;
     background-color: rgb(34, 34, 46);
     font-size: 20px;
     font-weight: bold;
+    height: 15%;
+    min-height: 15%;
 }
 
 /* gamer area */
