--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,3 +104,30 @@ footer {
 .score-area1 {
     font-weight: bold;
 }
+
+
+/** Screen site adjustments for tablets**/
+@media (max-width: 1200px) {
+    .Gamer1-area {
+        margin-left: 3%;
+        font-size: 20px; 
+        padding-top: 5%;
+
+    }
+
+    .Gamer2-area {
+        margin-right: 3%;
+        font-size: 20px;
+        padding-top: 5%;
+    }
+
+    .results-total > div {
+        font-size: 30px;
+        padding-top: 65%;
+    }
+
+    footer {
+        height: 20%;
+    }
+}
+
