--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@
 /* Main view */ 
 html {
     min-height: 100%;
-    position: relative;
     background-color: #41b3a3
 }
 
@@ -28,7 +27,7 @@ footer {
     background-color: rgb(34, 34, 46);
     font-size: 20px;
     font-weight: bold;
-    height: 12%;
+    height: 15%;
 }
 
 /* gamer area */
@@ -57,7 +56,7 @@ footer {
 
 
 .Gamer2-area {
-    margin-right: 12%;
+    margin-right: 15%;
     float: right;
     text-align: center;
     font-size: 30px;
@@ -124,7 +123,7 @@ footer {
     }
 
     footer {
-        height: 20%;
+        height: 17%;
     }
 }
 
@@ -187,11 +186,13 @@ footer {
     .results-total > div {
         font-size: 20px;
         padding-top: 140%;
+        padding-bottom: 5%;
     }
 
     footer {
-        font-size: 17px;
-        position:relative;
+        font-size: 15px;
+        height:200px;
+        position: relative;
     }
 
     .logo {
