--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ footer {
     background-color: rgb(34, 34, 46);
     font-size: 20px;
     font-weight: bold;
-    height: 15%;
+    height: 17%;
 }
 
 /* gamer area */
@@ -119,11 +119,12 @@ footer {
 
     .results-total > div {
         font-size: 30px;
-        padding-top: 30%;
+        padding-top:25%;
     }
 
     footer {
-        height: 17%;
+        height: 20%;
+        position: absolute;
     }
 }
 
@@ -132,6 +133,12 @@ footer {
     .results-total > div {
         padding-top: 60%;
 
+    }
+    .Gamer1-area {
+        margin-left: 0%;
+    }
+    .Gamer2-area {
+        margin-right: 0%;
     }
 }
 
@@ -158,7 +165,7 @@ footer {
     }
 
     footer {
-        height: 22%;
+        height: 24%;
         font-size: 17px;
         position: absolute;
     }
@@ -190,8 +197,8 @@ footer {
     }
 
     footer {
-        font-size: 15px;
-        height:200px;
+        font-size: 17px;
+        height:250px;
         position: relative;
     }
 
